--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "cors": "2.8.3",
     "express": "4.15.3",
     "lodash": "4.17.4",
-    "preact": "8.1.0",
-    "preact-compat": "3.16.0",
     "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-addons-perf": "15.4.2",
@@ -68,7 +66,7 @@
     "jest-serializer-enzyme": "1.0.0",
     "moxios": "0.4.0",
     "nodemon": "1.11.0",
-    "prettier": "1.3.1",
+    "prettier": "1.7.*",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "webpack-dev-server": "2.4.5"
