--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,29 @@
 {
-	"extends": [
+  "extends": [
     "plugin:flowtype/recommended",
-		"airbnb",
-		"prettier",
-		"prettier/react"
-	],
-	"plugins": [
+    "airbnb",
+    "prettier",
+    "prettier/react"
+  ],
+  "plugins": [
     "flowtype",
-		"prettier"
-	],
+    "prettier"
+  ],
   "parser": "babel-eslint",
-	"parserOptions": {
-		"ecmaVersion": 2016,
-		"sourceType": "module",
-		"ecmaFeatures": {
-			"jsx": true
-		}
-	},
-	"env": {
-		"es6": true,
-		"browser": true,
-		"node": true,
-    "jest": true
-	}
+  "parserOptions": {
+    "ecmaVersion": 2016,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "es6": true,
+    "jest": true,
+    "browser": true,
+    "node": true
+  },
+  "globals": {
+    "DEBUG": false
+  }
 }
