--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,6 @@
 {
-  "extends": [
-    "plugin:flowtype/recommended",
-    "airbnb",
-    "prettier",
-    "prettier/react"
-  ],
-  "plugins": [
-    "flowtype",
-    "prettier"
-  ],
+  "extends": ["plugin:flowtype/recommended", "prettier", "prettier/react"],
+  "plugins": ["flowtype", "prettier"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2016,
