--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "NODE_ENV=production webpack -p",
     "build:dev": "NODE_ENV=development webpack -d",
     "dev": "webpack-dev-server",
-    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
+    "format":
+      "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "start": "NODE_ENV=server node server.js",
     "test": "jest",
@@ -13,65 +14,49 @@
     "watch": "webpack --watch"
   },
   "jest": {
-    "snapshotSerializers": [
-      "jest-serializer-enzyme"
-    ]
+    "snapshotSerializers": ["jest-serializer-enzyme"]
   },
   "dependencies": {
-    "axios": "0.16.1",
-    "babel-plugin-dynamic-import-webpack": "1.0.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-register": "6.24.1",
-    "compression": "1.6.2",
-    "cors": "2.8.3",
-    "express": "4.15.3",
-    "lodash": "4.17.4",
-    "prop-types": "15.5.10",
-    "react": "15.5.4",
-    "react-addons-perf": "15.4.2",
-    "react-dom": "15.5.4",
-    "react-redux": "5.0.5",
-    "react-router-dom": "4.1.1",
-    "redux": "3.6.0",
-    "redux-thunk": "2.2.0",
-    "styled-components": "^2.0.0",
-    "webpack": "2.6.1",
-    "webpack-dev-middleware": "1.10.2",
-    "webpack-hot-middleware": "2.18.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.0.0-beta.7"
   },
   "devDependencies": {
-    "babel-core": "6.24.1",
-    "babel-eslint": "7.2.3",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.0",
     "babel-loader": "7.0.0",
-    "babel-plugin-dynamic-import-node": "1.0.2",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
-    "babel-preset-env": "1.5.1",
+    "babel-plugin-dynamic-import-node": "^1.1.0",
+    "babel-plugin-dynamic-import-webpack": "^1.0.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "6.24.1",
-    "enzyme": "2.8.2",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "15.0.1",
-    "eslint-config-prettier": "2.1.1",
+    "babel-register": "^6.26.0",
+    "enzyme": "^3.0.0",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-prettier": "^2.6.0",
     "eslint-config-react": "1.1.7",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-flow": "2.29.1",
-    "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "2.3.0",
-    "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-prettier": "2.1.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-flow": "^2.29.1",
+    "eslint-plugin-flowtype": "^2.36.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "7.0.1",
-    "flow-bin": "0.47.0",
-    "jest": "20.0.4",
-    "jest-serializer-enzyme": "1.0.0",
-    "moxios": "0.4.0",
-    "nodemon": "1.11.0",
-    "prettier": "1.7.*",
-    "react-hot-loader": "3.0.0-beta.6",
-    "react-test-renderer": "15.5.4",
-    "webpack-dev-server": "2.4.5"
+    "flow-bin": "^0.55.0",
+    "jest": "^21.1.0",
+    "jest-serializer-enzyme": "^1.0.0",
+    "prettier": "^1.7.0",
+    "react-test-renderer": "^16.0.0",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.8.2",
+    "webpack-hot-middleware": "^2.19.1"
   },
-  "name": "playing",
+  "name": "react_forms",
   "main": "server.js",
   "author": "Steven Straatemans <steven@straatemans.nl>",
   "license": "MIT"
