--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "webpack-dev-server": "^2.8.2",
     "webpack-hot-middleware": "^2.19.1"
   },
-  "name": "react_forms",
+  "name": "react_formstest",
   "main": "server.js",
   "author": "Steven Straatemans <steven@straatemans.nl>",
   "license": "MIT"
