--- a/package.json
+++ b/package.json
@@ -1,63 +1,22 @@
 {
-  "scripts": {
-    "api": "node ratingsAPI.js",
-    "build": "NODE_ENV=production webpack -p",
-    "build:dev": "NODE_ENV=development webpack -d",
-    "dev": "webpack-dev-server",
-    "format":
-      "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
-    "lint": "eslint **/*.{js,jsx} --quiet",
-    "start": "NODE_ENV=server node server.js",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "test:update": "jest -u",
-    "watch": "webpack --watch"
-  },
-  "jest": {
-    "snapshotSerializers": ["jest-serializer-enzyme"]
-  },
+  "name": "fe",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.7"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "7.0.0",
-    "babel-plugin-dynamic-import-node": "^1.1.0",
-    "babel-plugin-dynamic-import-webpack": "^1.0.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "6.24.1",
-    "babel-register": "^6.26.0",
     "enzyme": "^3.0.0",
-    "eslint": "^4.7.2",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-config-react": "1.1.7",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-flow": "^2.29.1",
-    "eslint-plugin-flowtype": "^2.36.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "7.0.1",
-    "flow-bin": "^0.55.0",
-    "jest": "^21.1.0",
-    "jest-serializer-enzyme": "^1.0.0",
-    "prettier": "^1.7.0",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.8.2",
-    "webpack-hot-middleware": "^2.19.1"
+    "enzyme-adapter-react-15": "^1.0.0",
+    "react-scripts": "0.9.5",
+    "react-test-renderer": "^16.0.0"
   },
-  "name": "react_forms",
-  "main": "server.js",
-  "author": "Steven Straatemans <steven@straatemans.nl>",
-  "license": "MIT"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
